--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "web-server": "(cd web/src && rimraf .cache dist && parcel index.html)"
   },
   "dependencies": {
+    "@apollo/client": "^3.0.1",
     "apollo-server": "^2.15.1",
-    "axios": "^0.19.2",
     "cors": "^2.8.5",
     "cross-env": "^7.0.2",
     "dataloader": "^2.0.0",
