v2 - context and authToken headers

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.0.1",
+    "@apollo/link-context": "^2.0.0-beta.3",
     "apollo-server": "^2.15.1",
     "cors": "^2.8.5",
     "cross-env": "^7.0.2",
